fix(zen-text): fix truncate prop
- truncate doesn't work with display flex and direct text-nodes children

--- a/src/components/zen-text/zen-text.scss
+++ b/src/components/zen-text/zen-text.scss
@@ -115,6 +115,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  display: block;
 }
 
 :host([pale]) {
